--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
+    "cheerio": "^1.1.0",
     "ejs": "^3.1.10",
     "jest": "^30.0.0",
     "nodemon": "^3.1.10",
